tests/diagnostics_golden/diag_pr118i_write_enum_literal.txt
Diagnostics Golden: Enum Literal Write
Source: tests/negative/neg_pr118i_write_enum_literal.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr118i_write_enum_literal.safe:5:4: error: assignment target rooted in enum literal `red` is not writable
  |
  | 5 |    red = green
  |   |    ^~~
  |
------------------------------------------------------------------------
